--- a/web-client/src/app/components/search-student/search-student.component.html
+++ b/web-client/src/app/components/search-student/search-student.component.html
@@ -1,1 +1,10 @@
-<p>search-student works!</p>
+<div>
+  <label>Search Student by Student Id</label>
+  <input [(ngModel)]="studentId" type="text" id="student-id" required="required">
+</div>
+<button (click)="onSearch()">Save</button>
+<div *ngIf="studentName">
+  <p>Student Name : {{studentName}}</p>
+  <p>Teacher Name : {{teacherName}}</p>
+  <p>Course Name : {{courseName}}</p>
+</div>
