implement dashboard ui

--- a/web-client/src/app/components/dashboard/dashboard.component.html
+++ b/web-client/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,18 @@
-<p>dashboard works!</p>
+<p>Courses We Offer</p>
+<table >
+  <caption></caption>
+  <thead>
+  <tr>
+    <th>Course Code</th>
+    <th>Course Name</th>
+    <th>Teacher</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr >
+    <td>dummy</td>
+    <td>dummy</td>
+    <td>dummy</td>
+  </tr>
+  </tbody>
+</table>
