--- a/web-client/src/app/components/dashboard/dashboard.component.html
+++ b/web-client/src/app/components/dashboard/dashboard.component.html
@@ -1,18 +1,21 @@
-<p>Courses We Offer</p>
-<table >
-  <caption></caption>
-  <thead>
-  <tr>
-    <th>Course Code</th>
-    <th>Course Name</th>
-    <th>Teacher</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr >
-    <td>dummy</td>
-    <td>dummy</td>
-    <td>dummy</td>
-  </tr>
-  </tbody>
-</table>
+<div class="container">
+  <p class="title">Courses We Offer</p>
+  <table class="course-table">
+    <caption></caption>
+    <thead>
+    <tr>
+      <th>Course Code</th>
+      <th>Course Name</th>
+      <th>Teacher</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>dummy</td>
+      <td>dummy</td>
+      <td>dummy</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+
