--- a/web-client/src/app/components/header/header.component.html
+++ b/web-client/src/app/components/header/header.component.html
@@ -1,14 +1,15 @@
 <header class="header">
-  <nav>
+  <nav class="nav">
     <div class="logo">School System</div>
     <ul class="nav-list">
-      <li class="nav-item"><a routerLink="/dashboard">DashBoard</a></li>
+      <li class="nav-item"><a routerLink="/dashboard">Dashboard</a></li>
       <li class="nav-item"><a routerLink="/save">Save Student</a></li>
       <li class="nav-item"><a routerLink="/search">Search Student</a></li>
     </ul>
     <ul class="auth-list">
       <li class="auth-item"><a routerLink="/login">Login</a></li>
-      <li class="auth-item"><a  routerLink="/logout">Logout</a></li>
+      <li class="auth-item"><a routerLink="/logout">Logout</a></li>
     </ul>
   </nav>
 </header>
+
