--- a/web-client/src/app/components/error-page/error-page.component.css
+++ b/web-client/src/app/components/error-page/error-page.component.css
@@ -1,18 +1,14 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f5f5f5;
+.container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin: 0;
+  text-align: center;
 }
 
-h1 {
-  font-size: 120px;
-  color: #e74c3c; /* Red color */
-  margin: 100px 0;
-  /*margin-top: 40px;*/
-  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
-  text-align: center;
+.title {
+  font-size: 48px; /* Adjust the font size as needed */
+  font-weight: bold;
+  color: #ff0000; /* Red color for the title */
 }
