--- a/web-client/src/app/components/search-student/search-student.component.css
+++ b/web-client/src/app/components/search-student/search-student.component.css
@@ -1,35 +1,38 @@
+body {
+  font-family: 'Arial', sans-serif;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 80vh;
+  min-height: 60vh; /* Adjust as necessary */
   text-align: center;
-  font-size: 18px;
+  margin-bottom: 20px;
 }
 
 label {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
-  display: block;
 }
 
 .input-field {
-  width: 10%;
+  width: 15%; /* Adjust the width as needed */
   padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 5px;
   font-size: 16px;
-  margin-bottom: 10px;
 }
 
 .search-button {
+  margin-top: 20px;
   background-color: #007bff;
   color: #fff;
-  padding: 10px 20px;
+  padding: 10px 25px;
   border: none;
-  border-radius: 4px;
+  border-radius: 5px;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
@@ -40,12 +43,20 @@ label {
 }
 
 .result-container {
-  margin-top: 20px;
-  text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+  text-align: center;
+  border: 1px solid #007bff;
+  border-radius: 5px;
+  padding: 20px;
+  width: 80%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 p {
-  font-size: 16px;
-  margin: 5px 0;
+  font-size: 18px;
+  margin: 10px 0;
 }
-
